--- a/css/style_comune.css
+++ b/css/style_comune.css
@@ -371,21 +371,6 @@ margin-top:130px;
 .immagine_c_winnie {
   margin-bottom:-70px;
 }
-.sinistra {
-  margin-left: 100px;
-}
-.destra {
-  margin-left: -100px;
-}
-.angelica {
-  margin-top: 5px;
-}
-.feroce {
-  margin-top: 25px;
-}
-.destrissima {
-  margin-left: -125px;
-}
 .margine {
   margin-top: 40px;
   margin-bottom: 70px;
@@ -394,9 +379,49 @@ margin-top:130px;
   margin-top:20px;
   margin-bottom:30px;
 }
+
+/* HOMEPAGE SOLUZIONE 1 */
+
+.home a{
+  width: 100%;
+  display: block;
+  position: relative;
+}
+.home .immagine{
+  margin-top: 0;
+  width: 100%;
+  height: auto;
+  z-index: 1;
+}
+.home .messaggio{
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  min-height: 100%;
+  padding: 20% 0 0 0;
+  background: rgba(255,255,255,0.7);
+
+  color: black;
+  font-size: 48px;
+  text-transform: uppercase;
+  transition: .4s all;
+  text-align: center;
+}
+.home a:hover .messaggio{
+  opacity: 1;
+  transition: .4s all;
+}
 h1 {
   color: white;
   font-size: 15px;
+}
+.home h1 {
+  font-size: 40px;
+  font-style: normal;
 }
 .nome {
   margin-top: 50px;
@@ -416,4 +441,69 @@ text-align: center;
 }
 p {
   font-family: sans-serif;
+}
+.omar {
+  margin-top: 120px;
+}
+.chris {
+  margin-top: -40px;
+}
+.biggers {
+  margin-top:55px;
+}
+.peter{
+  margin-top:40px;
+}
+.angelica {
+  margin-left:400px;
+  margin-top: -30px;
+}
+.winnie {
+  margin-top:350px;
+  margin-left:-450px;
+}
+.leggi {
+  margin-top:-55px;
+}
+.scientifico {
+  margin-top:-75px;
+}
+.modo {
+  margin-top:300px;
+}
+.bottone {
+  margin-left: 50%;
+  margin-top: -50px;
+  transform: translate(-50%,0);
+  margin-bottom: 100px;
+}
+.bottone_gemelle {
+  margin-left: 50%;
+  margin-top: 70px;
+  transform: translate(-50%,0);
+  margin-bottom: 100px;
+}
+.bottone_leggi {
+  margin-left: 50%;
+  margin-top: 10px;
+  transform: translate(-50%,0);
+  margin-bottom: 10px;
+}
+.bottone_peter {
+  margin-left: 50%;
+  margin-top: 590px;
+  transform: translate(-50%,0);
+  margin-bottom: 10px;
+}
+.bottone_sanford {
+  margin-left: 1300px;
+  margin-top: 50px;
+  transform: translate(-50%,0);
+  margin-bottom: 100px;
+}
+.bottone_verna {
+  margin-left: 50%;
+  margin-top: 90px;
+  transform: translate(-50%,0);
+  margin-bottom: 40px;
 }
